# QtPass

./: CMakeLists.txt
.github/workflows/: build_cmake.yml  ccpp.yml
cmake/: CreateAndEmbedTranslation.cmake
main/: CMakeLists.txt
src/: CMakeLists.txt  configdialog.cpp
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/ui/: CMakeLists.txt
tests/auto/util/: CMakeLists.txt
